# tongji_sanitation_car

./: .gitignore  .pw  README.md  lower.sh  upper.sh
CH341SER_LINUX/: .built-in.o.cmd  .ch34x.ko.cmd  .ch34x.mod.cmd  .ch34x.mod.o.cmd  .ch34x.o.cmd  ch34x.c  ch34x.ko  ch34x.mod.c  modules.order
scripts/: env.sh  install.sh  network.sh  play_bag_sensors.sh  pre_install.sh
src/: lower.launch  upper(复件).launch  upper.launch  upper_backup.launch
src/camera_lidar_fusion_detection/: CMakeLists.txt  package.xml
src/camera_lidar_fusion_detection/msg/: DumpsterInfo.msg  DumpsterLocArray.msg
src/camera_lidar_fusion_detection/src/: dumpster_detection.py  dumpster_detection_main.py  img_extract.py  img_laser_fusion.py  laser_point_extract.py
src/can_adapter/: CMakeLists.txt  package.xml
src/can_adapter/src/: serial_communication(另一个复件).py  serial_communication(复件).py  serial_communication.py  test.py
src/deepstream_vision/: CMakeLists.txt  package.xml
src/deepstream_vision/config/: label_lower_v1.txt  label_lower_v2.txt  label_up_0903.txt  pgie_yolov3_tlt_config.txt  pgie_yolov3_tlt_low_config.txt  pgie_yolov3_tlt_up_config.txt
src/deepstream_vision/data/: convert.sh  tlt-converter
src/deepstream_vision/include/deepstream_vision/: common.hpp  memory_mover.hpp  nvinfer_node.hpp  opencv_dewarp_source.hpp  ros_image_source.hpp  simple_pipeline.hpp  simple_visualize_sink.hpp
src/deepstream_vision/msg/: BBox.msg  BBoxArray.msg
src/deepstream_vision/src/: common.cpp  main3.cc  memory_mover.cpp  nvdsinfer_custombboxparser_yolov3_tlt.cpp  nvinfer_node.cpp  opencv_dewarp_source.cpp  ros_image_source.cpp  simple_pipeline.cpp  simple_visualize_sink.cpp  test_basic_pipeline.cpp  test_nvinfer_pipeline.cpp  test_ros_nvinfer_pipeline.cpp
src/display/: CMakeLists.txt  package.xml
src/fake_senser_/src/control_signal/msg/: Signal.msg
src/fake_senser_/src/control_signal/src/: pub_control_signal.py
src/fake_senser_/src/perception_signal/: package.xml
src/fake_senser_/src/perception_signal/src/: pub_perception_flag.py
src/fake_senser_/src/speed_detection/: CMakeLists.txt  package.xml
src/fake_senser_/src/speed_detection/msg/: Speedflag.msg
src/fake_senser_/src/speed_detection/src/: speeddetection.py
src/fake_senser_/src/stop_signal/msg/: Stopflag.msg
src/fake_senser_/src/stop_signal/src/: pub_stop_signal.py
src/fake_senser_/src/up_camera_detection/msg/: Bbox.msg
src/fake_senser_/src/up_image/src/: pub_up_image.py  sub_up_img.py
src/fake_senser_/src/work_logic/: package.xml
src/fusion_detection/: CMakeLists.txt  package.xml
src/fusion_detection/config/: default.yml
src/fusion_detection/msg/: DumpsterCAN.msg  DumpsterInfo.msg  DumpsterLoc.msg
src/fusion_detection/src/: dumpster_detection_main.py  dumpster_fitting.py  fusion_detection.py  fusion_detection_main.py  logic_ros.py  speed.py  utils.py  visualizer.py
src/image_pipeline-melodic/camera_calibration/src/camera_calibration/: camera_calibrator_tj.py  camera_undistorted_tj_lower.py  camera_undistorted_tj_upper.py  extrinsic_calibrator.py  transform.py
src/image_pipeline-melodic/image_publisher/: CMakeLists.txt
src/image_pipeline-melodic/image_publisher/src/node/: image_publisher1.cpp  image_publisher2.cpp
src/launcher/: CMakeLists.txt  package.xml
src/launcher/launch/: upper.launch
src/libuvc_ros-0.0.10/libuvc_camera/cfg/: UVCCamera.cfg
src/libuvc_ros-0.0.10/libuvc_camera/src/: camera_driver.cpp
src/lidar_camera_fusion_detection/: CMakeLists.txt  package.xml
src/lidar_camera_fusion_detection/src/: img_laser_fusion.py
src/port_serial/: CMakeLists.txt  package.xml  readme.md
src/port_serial/src/: serial_communication.py  test_det2con.py
src/usb_camera_driver/undistortion/: CMakeLists.txt  package.xml
src/usb_camera_driver/undistortion/src/: camera_calibrator_tj.py  camera_undistorted_tj_lower.py  camera_undistorted_tj_upper.py  fusion_node.py
src/usb_camera_driver/undistortion/src/camera_calibration/: camera_undistorted_tj_lower.py  transform.py
src/visualize_logic/src/control_signal/: CMakeLists.txt  package.xml
src/visualize_logic/src/perception_signal/: CMakeLists.txt
src/visualize_logic/src/stop_signal/: CMakeLists.txt  package.xml
src/visualize_logic/src/up_camera_detection/: CMakeLists.txt  package.xml
src/visualize_logic/src/up_camera_detection/src/: pub_up_camera_det.py
src/visualize_logic/src/up_image/: CMakeLists.txt  package.xml
src/visualize_logic/src/up_image/src/: video_play.py
src/visualize_logic/src/work_logic/: CMakeLists.txt
src/visualize_logic/src/work_logic/src/: unit_test_logic.py  unit_test_new.py
src/work_logic/: CMakeLists.txt
src/work_logic/src/: logic_ros.py  unit_test_new.py
src/wr_lidar_driver/: CMakeLists.txt  package.xml
src/wr_lidar_driver/cfg/: WrLs.cfg
src/wr_lidar_driver/doc/: WR激光扫描仪ROS包使用说明.doc
src/wr_lidar_driver/include/wr_ls_udp/: wr_ls_common_udp.h
src/wr_lidar_driver/launch/: wr_ls1207de_udp_nodelet_with_1_lidar.launch
src/wr_lidar_driver/src/: wr_ls1207de_nodelet.cpp
src/wr_ls_udp/: CMakeLists.txt  README.md  package.xml
src/wr_ls_udp/include/wr_ls_udp/: parser_base.h  style_c1.bat  wr_ls1207de_parser.h  wr_ls_common.h  wr_ls_constants.h  wr_ls_sensor_frame.h
src/wr_ls_udp/launch/: wr_ls1207de_udp_nodelet_with_2_lidars.launch  wr_ls1207de_udp_with_1_lidar.launch  wr_ls1207de_udp_with_2_lidars.launch
src/wr_ls_udp/plugins/: wr_ls1207de.xml
src/wr_ls_udp/src/: parser_base.cpp  wr_ls1207de.cpp  wr_ls1207de_parser.cpp  wr_ls_common.cpp  wr_ls_common_udp.cpp  wr_ls_sensor_frame.cpp
src/wr_ls_udp/urdf/: wr_ls1207de.urdf.xacro  wr_ls1207de_2.urdf.xacro  wr_ls_udp.urdf.xacro
src/yolo_detect_pkg/: CMakeLists.txt  package.xml
src/yolo_detect_pkg/msg/: BBox.msg  Floats.msg
src/yolo_detect_pkg/src/: detector.py  dumpster_detect.py  models.py  node.py  utils.py  yolo_detect_and_publish.py  yolo_detect_publish.py
